# auth-client

./: .gitlab-ci.yml  Cargo.toml  README.md
src/: axum.rs  lib.rs  rocket.rs  tests.rs
tool/: Cargo.toml
tool/src/: main.rs
