[package]
name = "fractal-auth-client"
version = "0.1.0"
edition = "2021"

[dependencies]
jwks-client = { git = "https://github.com/jfbilodeau/jwks-client" }
reqwest = { version = "0.11.8", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["uuid"], optional = true }
thiserror = "1.0.30"
rocket_okapi = { version = "0.8.0-rc.1", optional = true }
uuid = { version = "0.8.2", features = ["serde"] }
url = "2.2.2"
serde = { version = "1.0.132", features = ["derive"] }
log = "0.4.16"

[features]
default = []
openapi = ["rocket_okapi", "rocket"]
insecure-stub = []
