[package]
name = "fractal-auth-client"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Elsen <patrick@fractalnetworks.co>"]
description = "Authentication client library for Fractal Networks."
license = "AGPL-3.0-only"
repository = "https://github.com/fractalnetworksco/auth-client"

[dependencies]
jwks-client = { git = "https://gitlab.com/fractalnetworks/libraries/jwks-client" }
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls"] }
rocket = { version = "0.5.0-rc", features = ["uuid"], optional = true }
thiserror = "1.0.30"
uuid = { version = ">=0.8.2, <1.1.0", features = ["serde", "v4"] }
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

[features]
default = ["static-tokens"]
insecure-stub = []
static-tokens = []

[workspace]
members = [".", "tool"]

[dev-dependencies]
anyhow = "1.0.57"
http = "0.2.7"
matches = "0.1.9"
tokio = { version = "1.18.2", features = ["macros"] }
warp = "0.3.2"
