[package]
name = "fractal-auth-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
env_logger = "0.9.0"
fractal-auth-client = { path = "..", features = ["insecure-stub"] }
log = "0.4.17"
reqwest = "0.11.10"
structopt = "0.3.26"
tokio = { version = "1.18.1", features = ["macros", "rt"] }
url = "2.2.2"
